Add data type detection.
Add detection of the time-series data types when using
the new declaration language, together with unit tests.

Refs #113677